[package]
name = "trojan"
version = "0.15.0"
authors = ["Hoping White <baihaoping@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
mio = { version = "1.0", features = ["net", "os-poll"] }
log = "0.4"
chrono = "0.4"
libc = "0.2"
rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.10"
bytes = "1.6"
dns-lookup = "2.0"
cfg-if = "1.0"
webpki-roots = "0.26"
webpki = "0.22"
socket2 = "0.5"
rayon = "1.10"
rustls-pemfile = "2.1"
lazy_static = "1.5"
derive_more = "0.99"
libloading = "0.8"
crossbeam = "0.8"
trust-dns-proto = "0.23"
widestring = "1.1"
itertools = "0.13"
smoltcp = { version = "0.11" }
backtrace = "0.3"
hex = "0.4"
surge-ping = "0.8"
tokio = { version = "1.38", features = ["full"] }
rand = "0.8"
test-log = "0.2"
notify = "6.1"
ringbuf = "0.4"
httparse = "1.9"
async_smoltcp = { path = "async_smoltcp" }
tokio-rustls = "0.26"
rustls-pki-types = "1.7"
futures = "0.3"

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wintun = "0.4"
wintool = { path = "wintool" }
winapi = { version = "0.3", features = ["netioapi", "impl-debug", "impl-default", "combaseapi", "ipifcons"] }

[target.'cfg(not(windows))'.dependencies]
backtrace-on-stack-overflow = "0.3"
ipset = { version = "0.7" }

[dependencies.fern]
version = "0.6"
features = ["reopen-03"]

[profile.release]
lto = true
#debug = true
