[package]
name = "trojan"
version = "0.15.0"
authors = ["Hoping White <baihaoping@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive", "cargo", "env"] }
mio = { version = "1.2", features = ["net", "os-poll"] }
log = "0.4"
chrono = "0.4"
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.11"
bytes = "1.11"
dns-lookup = "3.0"
cfg-if = "1.0"
webpki-roots = "1.0"
webpki = "0.22"
socket2 = "0.6"
rayon = "1.12"
rustls-pemfile = "2.2"
lazy_static = "1.5"
derive_more = { version = "2.1", features = ["full"] }
libloading = "0.9"
crossbeam = "0.8"
trust-dns-proto = "0.23"
widestring = "1.2"
itertools = "0.14"
smoltcp = { version = "0.13" }
backtrace = "0.3"
hex = "0.4"
surge-ping = "0.8"
tokio = { version = "1.52", features = ["full"] }
rand = "0.10"
test-log = "0.2"
notify = "8.2"
ringbuf = "0.5"
httparse = "1.10"
async_smoltcp = { path = "async_smoltcp" }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
rustls-pki-types = "1.14"
futures = "0.3"
trust-dns-resolver = "0.23"

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wintun = "0.5.1"
wintool = { path = "wintool" }
winapi = { version = "0.3", features = ["netioapi", "impl-debug", "impl-default", "combaseapi", "ipifcons", "consoleapi"] }

[target.'cfg(not(windows))'.dependencies]
backtrace-on-stack-overflow = "0.3"
ipset = { version = "0.9" }

[dependencies.fern]
version = "0.7"
features = ["reopen-03"]

[profile.release]
lto = true
#debug = true
