[package]
name = "async_smoltcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.10", features = [] }
bytes = "1.4"
tokio = { version = "1.28", features = [] }
tokio-util = "0.7"
log = "0.4"