[package]
name = "async_smoltcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.11", features = [] }
bytes = "1.6"
tokio = { version = "1.39", features = [] }
tokio-util = "0.7"
log = "0.4"