[package]
name = "async_smoltcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.13", features = [] }
bytes = "1.11"
tokio = { version = "1.52", features = ["sync"] }
tokio-util = "0.7"
log = "0.4"
