[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20"
derive_more = "0.99"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_logger = "0.2"
log = "0.4"
image = "0.24"
backtrace = "0.3"
wintool = { path = "../wintool" }


[build-dependencies]
winres = "0.1"