[package]
name = "async_rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52", features = ["net", "sync"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
log = "0.4"
bytes = "1.11"
