[package]
name = "wintool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["netioapi", "impl-debug", "impl-default", "combaseapi", "ipifcons",
    "iphlpapi", "iptypes", "ws2def", "winerror", "winbase", "ifdef", "winsock2", "ws2ipdef"] }
widestring = "1.0"
winreg = "0.11"
log = "0.4"