[package]
name = "mobile"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
libc = "0.2"
lazy_static = "1.4"
derive_more = "0.99"
smoltcp = { version = "0.13", features = [] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14"
itertools = "0.12.0"
bytes = "1.5"
crossbeam = "0.8"
dns-lookup = "2.0"
rayon = "1.8"
webpki-roots = "1.0.3"
trust-dns-proto = "0.23.2"
socket2 = "0.5"
sha2 = "0.10"
hex = "0.4"
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = { version = "1.34", features = ["net", "macros", "rt", "time", "sync", "io-util"] }
async_smoltcp = { path = "../../async_smoltcp" }
async_rustls = { path = "../../tokio_rustls" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21", features = [] }
android_logger = "0.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = ["async"]
custom-protocol = ["tauri/custom-protocol"]
async = []
