[package]
name = "mobiletrojan"
version = "0.1.0"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mobiletrojan-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-activity-name = "com.bmshi.mobiletrojan.MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.6.1",
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.8.0",
]
project-dependencies = ["org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"]
app-plugins = ["org.jetbrains.kotlin.android"]
app-permissions = ["android.permission.INTERNET"]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"
vulkan-validation = false

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "com.bmshi.mobiletrojan"
WRY_ANDROID_LIBRARY = "mobiletrojan"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/bmshi/mobiletrojan"

[package.metadata.cargo-apple.ios]
frameworks = ["WebKit"]

[dependencies]
anyhow = "1.0.56"
log = "0.4.11"
wry = "0.34"
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
smoltcp = "0.11.0"
rustls = { version = "0.22", features = [] }
rustls-pki-types = "1.2"
itertools = "0.12.0"
bytes = "1.5"
crossbeam = "0.8"
dns-lookup = "2.0"
rayon = "1.8"
webpki-roots = "0.26"
trust-dns-proto = "0.23.2"
socket2 = "0.5"
sha2 = "0.10"
hex = "0.4"
mio = "0.8"
tokio-rustls = "0.25"
tokio = { version = "1.34", features = ["net", "macros"] }
async_smoltcp = { path = "../../async_smoltcp" }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
paste = "1.0"
ndk-context = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9.3"