[package]
name = "app"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
cargo = "0.80"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "image-ico"] }
tokio = { version = "1.52", features = ["time"] }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-single-instance = { version = "2.4.2" }
derive_more = { version = "2.0", features = ["from"] }
backtrace = "0.3"
log = "0.4"
chrono = "0.4"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-shell = "2.3.5"

[target.'cfg(windows)'.dependencies]
wintool = { path = "../../wintool" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
